# evogenom-ai

./: .dockerignore  .env.dev  .env.test  .gitignore  Dockerfile  README.md  codegen.ts  deploy.sh  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  flake.nix  graphql.config.yml  nest-cli.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  shell.nix  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.cursor/rules/: clean-code.mdc  fastapi-folder-structure.mdc  fastapi.mdc  graphql-queries.mdc  project-rules.mdc  typescript.mdc  writing-tests.mdc
.github/workflows/: README.md  deploy-dev.yml  test.yml
alembic/: env.py
alembic/versions/: e39afcd496a8_add_ephemeral_token_table.py
app/: conftest.py  db.py  main.py  settings.py
app/models/: __init__.py  auth.py  base.py
app/routers/: auth.py  auth_test.py
app/services/: auth.py  auth_test.py
docs/design/: chat_endpoint.md
drizzle/: 0000_foamy_groot.sql  0001_smiling_triton.sql  0003_concerned_risque.sql  0004_cooing_gertrude_yorkes.sql  0005_talented_punisher.sql  0006_overconfident_wrecking_crew.sql  0007_cloudy_gressill.sql  0008_overconfident_wilson_fisk.sql  0009_lively_fixer.sql  0010_stale_marauders.sql  0011_free_nighthawk.sql  0011_slow_bullseye.sql
drizzle/meta/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json  (+8 more)
graphql/: schema.graphql
src/: app.module.ts  config.ts  env.validator.spec.ts  env.validator.ts  instrument.ts  main.e2e.spec.ts  main.ts
terraform/: .gitignore  README.md  versions.tf
test/: jest-e2e.json  utils.ts
(+99 files in other folders)
