[project]
name = "evogenom-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "cachetools>=5.5.2",
    "fastapi>=0.115.11",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest-env>=1.1.5",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["app"]

[tool.coverage.run]
source = ["app"]
omit = ["*_test.py", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

